# AoC

./: .gitignore  README.md
AoC2016/: AoC2016.cabal  LICENSE
AoC2016/app/: Main.hs
AoC2016/src/: AoC201601.hs  AoC201602.hs  AoC201603.hs  AoC201604.hs  AoC201605.hs  AoC201606.hs  AoC201607.hs  AoC201608.hs  AoC201609.hs  Caesar.hs  Frequency.hs
aoc2017/: CHANGELOG.md
aoc2017/src/aoc2017/: core.clj  day_1.clj  day_2.clj  helpers.clj
aoc2017/test/aoc2017/: core_test.clj  day_1_test.clj  day_2_test.clj
aoc2019/: CHANGELOG.md
aoc2019/src/aoc2019/: core.clj  day_1.clj  day_2.clj  day_3.clj  day_4.clj
aoc2019/test/aoc2019/: day_1_test.clj  day_2_test.clj  day_3_test.clj  day_4_test.clj
aoc2020/: problem-1-1.ml  problem-1-2.ml
aoc2021/: main.bml
aoc2021/day01/: dune  main.ml
aoc2021/day02/: main.ml
aoc2021/day03/: main.ml
aoc2021/day04/: dune  main.ml
aoc2021/day05/: main.ml
aoc2021/day06/: main.ml
aoc2021/day07/: main.ml
aoc2021/day08/: main.ml
aoc2021/utils/: utils.ml
aoc2022/day01/: dune-project
aoc2022/day02/: dune-project
aoc2022/day06/: dune-project
aoc2023/: CHANGELOG.md
aoc2023/src/aoc2023/: core.clj  day01.clj
