name:                AoC2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rickerbh/AoC2016#readme
license:             BSD3
license-file:        LICENSE
author:              Hamish Rickerby
maintainer:          hamish.rickerby@gmail.com
copyright:           Hamish Rickerby
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AoC201601
                     , AoC201602
                     , AoC201603
                     , AoC201604
                     , AoC201605
                     , AoC201606
                     , AoC201607
                     , AoC201608
                     , AoC201609
                     , Caesar
                     , Frequency
                     , Str
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , parsec
                     , pureMD5
                     , split
                     , template-haskell
  default-language:    Haskell2010

executable AoC2016-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AoC2016
  default-language:    Haskell2010

test-suite AoC2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AoC2016
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rickerbh/AoC2016
